<resources>
    <string name="app_name">ProjetDevMobile</string>
    <string name="title_activity_room">RoomActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Habitations">Habitations</string>
    <string name="newHabitation">New Habitation</string>
    <string name="Rooms">Rooms</string>
    <string name="newRoom">New Room</string>
    <string name="seeGraph">Display Graph</string>
    <string name="visit">Visit the habitation</string>
    <string name="habitationName">Name of the Habitation</string>
    <string name="roomName">Room Name</string>
    <string name="north">North</string>
    <string name="south">South</string>
    <string name="east">East</string>
    <string name="west">West</string>
    <string name="room">Room</string>
    <string name="habitation">Habitation</string>
    <string name="error">Error</string>
    <string name="defineEntrance">Define the entrance</string>
    <string name="save">Save</string>
    <string name="pause">Explanation</string>
    <string name="quit">Quit</string>
    <string name="welcome">Welcome !</string>
    <string name="goHome">Go to habitations page !</string>
    <string name="warningWelcome">This is displayed when your habitation/room is not finished, you need to finish it in order to visit.</string>
    <string name="startWelcome">Click on it to visit the habitation.</string>
    <string name="entranceWelcome">This is displayed next to your entrance room.</string>
    <string name="trashWelcome">Click on it to delete your habitation/room.</string>
    <string name="onVisit">When visiting, swipe to change the orientation.</string>
    <string name="onSelect">Pinch to create an access in selection mode.</string>
    <string name="selectionMode">Tap on taken picture to enter in the Selection Mode.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="choose_room">Choose a room where to go with this access</string>
    <string name="entry_room">Choose the entry room</string>
    <string name="already_taken">This name is already taken</string>
    <string name="doAction">Do an action</string>
    <string name="retakePicture">Retake Picture</string>
</resources>