<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".projetdevmobileIG.MainActivity">


    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="352dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:onClick="goHome"
        android:text="@string/goHome"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="441dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageWarningWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/warning" />

        <TextView
            android:id="@+id/textWarningWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/warningWelcome"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imagePlayWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/play" />

        <TextView
            android:id="@+id/textPlayWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/startWelcome"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageStartWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/start" />

        <TextView
            android:id="@+id/textStartWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/entranceWelcome"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageDeleteWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/trash" />

        <TextView
            android:id="@+id/textDeleteWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/trashWelcome"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textTapPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectionMode"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textSwipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onVisit"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textSelectionWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onSelect"
        android:textColor="@color/black"
        android:textSize="20sp" />


</LinearLayout>