<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".projetdevmobileIG.HabitationActivity">

    <EditText
        android:id="@+id/habitationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/habitationName"
        android:inputType="textPersonName"
        android:text=""
        android:singleLine="true"
        />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/buttonDefineEntrance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:onClick="defineEntrance"
        android:text="@string/defineEntrance" />

    <Button
        android:id="@+id/newRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onNewRoom"
        android:text="@string/newRoom" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>